--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ regex = "1"
 fancy-regex = "0.8.0"
 lazy_static = "1.4.0"
 string-interner = "0.14.0"
+maplit = "^1.0.2"
+
 
 [dependencies.proc_macros]
 package = "proc-macros"
