--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ fancy-regex = "0.8.0"
 lazy_static = "1.4.0"
 string-interner = "0.14.0"
 maplit = "^1.0.2"
+concat-idents = "1.1.3"
 
 
 [dependencies.proc_macros]
