--- a/examples/bash/Cargo.toml
+++ b/examples/bash/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-m6tokenizer = { path = "../../" }
+m6lexerkit = { path = "../../" }
 maplit = "^1.0.2"
