--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ concat-idents = "1.1.3"
 
 
 [dependencies.proc_macros]
-package = "proc-macros"
+package = "m6lexerkit-proc-macros"
 path = "proc_macros"
 
 [workspace]
